--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Liste des cours d'IMA</title>
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body>
         <h1>Liste des cours d'IMA</h1>
