Main INF203 files

--- a/index.html
+++ b/index.html
@@ -16,6 +16,96 @@
 
         <h2>INF201 : OCaml</h2>
         <h2>INF203 : Unix, Bash et C</h2>
+            <p>
+                Il y a des exercices sur Caséine chaque semaine. Les profs sont disponibles par mail
+                pendant les horaires de TP/TD normaux.
+            </p>
+            <p>
+                Pour vous entraîner, vous pouvez soit installer CLang et Bash sur votre machine,
+                soit vous connecter à distance via SSH aux serveurs de l'UGA (Turing).
+            <p><a href="https://inf203.gricad-pages.univ-grenoble-alpes.fr/">Le site original</a></p>
+            <ol>
+                <li>Bases en UNIX
+                    <ul>
+                        <li><a href="/INF203/semaine-1/diapo.pdf">Cours (diaporama)</a></li>
+                        <li><a href="/INF203/semaine-1/exercices.pdf">Exercices</a></li>
+                        <li>TP :
+                            <a href="/INF203/semaine-1/tp.pdf">Sujet</a> et
+                            <a href="/INF203/semaine-1/tp.zip">fichiers</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>UNIX : expansion, redirections, commandes avancées
+                    <ul>
+                        <li><a href="/INF203/semaine-2/diapo.pdf">Cours (diaporama)</a></li>
+                        <li><a href="/INF203/semaine-2/exercices.pdf">Exercices</a></li>
+                        <li>TP :
+                            <a href="/INF203/semaine-2/tp.pdf">Sujet</a> et
+                            <a href="/INF203/semaine-2/tp.zip">fichiers</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>Structures de contrôle en shell
+                    <ul>
+                        <li><a href="/INF203/semaine-3/diapo.pdf">Cours (diaporama)</a></li>
+                        <li><a href="/INF203/semaine-3/exercices.pdf">Exercices</a></li>
+                        <li>TP :
+                            <a href="/INF203/semaine-3/tp.pdf">Sujet</a> et
+                            <a href="/INF203/semaine-3/tp.zip">fichiers</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>Consolidation shell et UNIX
+                    <ul>
+                        <li><a href="/INF203/semaine-4/diapo.pdf">Cours (diaporama)</a></li>
+                        <li><a href="/INF203/semaine-4/exercices.pdf">Exercices</a></li>
+                        <li>TP :
+                            <a href="/INF203/semaine-4/tp.pdf">Sujet</a> et
+                            <a href="/INF203/semaine-4/tp.zip">fichiers</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>Langage C : introdution, typage, tableaux
+                    <ul>
+                        <li><a href="/INF203/semaine-5/diapo.pdf">Cours (diaporama)</a></li>
+                        <li><a href="/INF203/semaine-5/exercices.pdf">Exercices</a></li>
+                        <li>TP :
+                            <a href="/INF203/semaine-5/tp.pdf">Sujet</a> et
+                            <a href="/INF203/semaine-5/tp.zip">fichiers</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>C, pointeurs, structures
+                    <ul>
+                        <li><a href="/INF203/semaine-6/diapo.pdf">Cours (diaporama)</a></li>
+                        <li><a href="/INF203/semaine-6/exercices.pdf">Exercices</a></li>
+                        <li>TP :
+                            <a href="/INF203/semaine-6/tp.pdf">Sujet</a> et
+                            <a href="/INF203/semaine-6/tp.zip">fichiers</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>C, fichiers, arguments de la ligne de commandie
+                    <ul>
+                        <li><a href="/INF203/semaine-7/diapo.pdf">Cours (diaporama)</a></li>
+                        <li><a href="/INF203/semaine-7/exercices.pdf">Exercices</a></li>
+                        <li>TP :
+                            <a href="/INF203/semaine-7/tp.pdf">Sujet</a> et
+                            <a href="/INF203/semaine-7/tp.zip">fichiers</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>Correction du partiel et Unités de compilation en C
+                    <ul>
+                        <li><a href="/INF203/semaine-8/diapo.pdf">Cours (diaporama)</a></li>
+                        <li><a href="/INF203/semaine-8/exercices.pdf">Exercices</a></li>
+                        <li>TP :
+                            <a href="/INF203/semaine-8/tp.pdf">Sujet</a> et
+                            <a href="/INF203/semaine-8/tp.zip">fichiers</a>
+                        </li>
+                    </ul>
+                </li>
+            </ol>
         <h2>MAT201 : Algèbre linéaire</h2>
         <h2>MAT203 : Analyse</h2>
             <ol>
