--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
         <meta charset="utf-8">
         <title>Liste des cours d'IMA</title>
         <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
     </head>
     <body>
+        <a class="github-fork-ribbon" href="https://github.com/WartaPoirier-corp/cours-ima" target="_blank" data-ribbon="View on GitHub" title="View on GitHub">View on GitHub</a>
+
         <h1>Liste des cours d'IMA</h1>
         <p>
             Cette page recense toutes les ressources nécessaires pour suivre les cours à distance,
