Add turing link and disclaimer

--- a/index.html
+++ b/index.html
@@ -17,6 +17,36 @@
             personnels des professeurs.
         </p>
 
+        <div style="border: 1px solid black; padding: 10px; margin: 10px;">
+            <h2 style="margin-top: 0;">Turing depuis votre navigateur</h2>
+            <p>
+                Pour les UEs d'INF*, un pont (non-officiel) vers turing a été
+                mis en place à l'addresse
+                <a href="https://turing.polys-uga.edgarogh.fr/">https://turing.polys-uga.edgarogh.fr/</a>,
+                et permet d'accéder à turing depuis un navigateur web, sans
+                installer quoi que ce soit sur votre ordinateur.
+            </p>
+            <p>
+                Nous insistons sur le fait que ce service est non-officiel, et
+                n'offrons absolument <mark>AUCUNE GARANTIE</mark> sur son bon
+                fonctionnement, ni sur l'absence de faille de sécurité qui
+                donneraient, par exemple, accès à votre compte UGA à une
+                personne non autorisée.
+                <mark>
+                    NOUS DECLINONS TOUTE RESPONSABILITE EN CAS DE COMPROMISSION
+                    DE COMPTE PAR LE BIAIS DE CE SERVICE
+                </mark>
+            </p>
+            <p>
+                <i>
+                    Nous faisons quand même du mieux possible pour fournir un
+                    service de qualité et mettons en oeuvre tout ce qu'il nous
+                    est possible de mettre en oeuvre pour pas qu'il n'y ait de
+                    problème.s (connection sécurisée par HTTPS par exemple).
+                </i>
+            </p>
+        </div>
+
         <h2>INF201 : OCaml</h2>
         <h2>INF203 : Unix, Bash et C</h2>
             <p>
