--- a/index.html
+++ b/index.html
@@ -140,6 +140,14 @@
                 </li>
             </ol>
         <h2>MAT201 : Algèbre linéaire</h2>
+            <ul>
+                <li><a href="/MAT201/cours.pdf">Cours</a></li>
+                <li>Notes de cours (spécial confinement)
+                    <ul>
+                        <li><a href="/MAT201/notes_cours_16_03.pdf">16/03</a></li>
+                    </ul>
+                </li>
+            </ul>
         <h2>MAT203 : Analyse</h2>
             <ol>
                 <li>Nombres réels</li>
