Fix MAT201 description

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </ol>
         <h2>MAT201 : Algèbre linéaire</h2>
             <ul>
-                <li><a href="/MAT201/cours.pdf">Cours</a></li>
+                <li><a href="/MAT201/cours.pdf">Cours + TD + Annales</a></li>
                 <li>Notes de cours (spécial confinement)
                     <ul>
                         <li><a href="/MAT201/notes_cours_16_03.pdf">16/03</a></li>
