--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 pendant les horaires de TP/TD normaux.
             </p>
             <p>
-                Pour vous entraîner, vous pouvez soit installer CLang et Bash sur votre machine,
-                soit vous connecter à distance via SSH aux serveurs de l'UGA (Turing).
+                Pour vous entraîner, vous pouvez soit <a href="/INF203/installation">installer CLang et Bash sur votre machine</a>,
+                soit <a href="/INF203/ssh">vous connecter à distance via SSH aux serveurs de l'UGA (Turing)</a>.
             <p><a href="https://inf203.gricad-pages.univ-grenoble-alpes.fr/">Le site original</a></p>
             <ol>
                 <li>Bases en UNIX
