--- a/index.html
+++ b/index.html
@@ -150,8 +150,16 @@
             </ul>
         <h2>MAT203 : Analyse</h2>
             <ol>
-                <li>Nombres réels</li>
-                <li>Suites réelles</li>
+                <li>Nombres réels
+                    <ul>
+                        <li><a href="/MAT203/chap-1/cours.pdf">Cours</a></li>
+                    </ul>
+                </li>
+                <li>Suites réelles
+                    <ul>
+                        <li><a href="/MAT203/chap-2/cours.pdf">Cours</a></li>
+                    </ul>
+                </li>
                 <li>Fonctions</li>
                 <li>Dérivées
                     <ul>
@@ -159,6 +167,9 @@
                     </ul>
                 </li>
             </ol>
+            <ul>
+                <li><a href="/MAT203/exercices.pdf">Exercices</a></li>
+            </ul>
         <h2>PHY201 : Courant alternatif</h2>
             <ul>
                 <li><a href="/PHY201/cours.pdf">Cours</a></li>
