--- a/index.html
+++ b/index.html
@@ -48,6 +48,71 @@
         </div>
 
         <h2>INF201 : OCaml</h2>
+            <p><a href="https://try.ocamlpro.com/">Interpreteur OCaml en ligne</a></p>
+            <p><a href="http://www-verimag.imag.fr/~bassetni/INF201/INF201.html">Le site original</a></p>
+            <ul>
+                <li><a href="/INF201/td.pdf">TD</a></li>
+                <li><a href="/INF201/tp.pdf">TP</a></li>
+                <li><a href="/INF201/projet_rummikub.pdf">Projet Rummikub</a></li>
+            </ul>
+            <p>
+                Semaines:
+            </p>
+            <ol>
+                <li>Semaine 1
+                    <ul>
+                        <li><a href="/INF201/sem-1/intro.pdf">Introduction</a></li>
+                        <li><a href="/INF201/sem-1/identificateurs_types_fonctions.pdf">Identificateurs, fonctions, types</a></li>
+                        <li><a href="/INF201/sem-1/code.ml">code.ml</a></li>
+                    </ul>
+                </li>
+                <li>Semaine 2
+                    <ul>
+                        <li><a href="/INF201/sem-2/types_pattern_matching.pdf">Définition de types</a></li>
+                        <li><a href="/INF201/sem-2/code.ml">code.ml</a></li>
+                    </ul>
+                </li>
+                <li>Semaine 3
+                    <ul>
+                        <li><a href="/INF201/sem-3/recursivite.pdf">Définitions récursives</a></li>
+                        <li><a href="/INF201/sem-3/code.ml">code.ml</a></li>
+                    </ul>
+                </li>
+                <li>Semaine 4
+                    <ul>
+                        <li><a href="/INF201/sem-4/recursivite_suite.pdf">Définitions récursives (suite)</a></li>
+                        <li><a href="/INF201/sem-4/code.ml">code.ml</a></li>
+                    </ul>
+                </li>
+                <li>Semaine 5
+                    <ul>
+                        <li><a href="/INF201/sem-5/listes.pdf">Listes #1</a></li>
+                        <li><a href="/INF201/sem-5/code.ml">code.ml</a></li>
+                    </ul>
+                </li>
+                <li>Semaine 6
+                    <ul>
+                        <li><a href="/INF201/sem-6/listes_suite.pdf">Listes #2</a></li>
+                        <li><a href="/INF201/sem-6/code.ml">code.ml</a></li>
+                    </ul>
+                </li>
+                <li>Semaine 7 - Annales partiel
+                    <a href="/INF201/sem-7/qcm_2019.pdf">sujet</a>
+                    <a href="/INF201/sem-7/qcm_2019_correction.pdf">corrigé</a>
+                </li>
+                <li>Semaine 8
+                    <ul>
+                        <li><a href="/INF201/sem-8/listes_suite_suite.pdf">Listes #3</a></li>
+                        <li><a href="/INF201/sem-8/code.ml">code.ml</a></li>
+                    </ul>
+                </li>
+            </ol>
+            <p>
+                Un cours alternatif non-"officiel" est accessible à l'addresse
+                <a href="https://ocaml.gelez.xyz">https://ocaml.gelez.xyz</a>.
+                Il correspond au programme d'INF201, mais est abordé sous un
+                angle un peu différent.
+            </p>
         <h2>INF203 : Unix, Bash et C</h2>
             <p>
                 Il y a des exercices sur Caséine chaque semaine. Les profs sont disponibles par mail
