Improve INF201 section layout

--- a/index.html
+++ b/index.html
@@ -30,40 +30,39 @@
                 Semaines:
             </p>
             <ol>
-                <li>Semaine 1
+                <li><a href="/INF201/sem-1/intro.pdf">Introduction</a>: Identificateurs, fonctions, types
                     <ul>
-                        <li><a href="/INF201/sem-1/intro.pdf">Introduction</a></li>
-                        <li><a href="/INF201/sem-1/identificateurs_types_fonctions.pdf">Identificateurs, fonctions, types</a></li>
+                        <li><a href="/INF201/sem-1/identificateurs_types_fonctions.pdf">Cours</a></li>
                         <li><a href="/INF201/sem-1/code.ml">code.ml</a></li>
                     </ul>
                 </li>
-                <li>Semaine 2
+                <li>Définition de types
                     <ul>
-                        <li><a href="/INF201/sem-2/types_pattern_matching.pdf">Définition de types</a></li>
+                        <li><a href="/INF201/sem-2/types_pattern_matching.pdf">Cours</a></li>
                         <li><a href="/INF201/sem-2/code.ml">code.ml</a></li>
                     </ul>
                 </li>
-                <li>Semaine 3
+                <li>Définitions récursives
                     <ul>
-                        <li><a href="/INF201/sem-3/recursivite.pdf">Définitions récursives</a></li>
+                        <li><a href="/INF201/sem-3/recursivite.pdf">Cours</a></li>
                         <li><a href="/INF201/sem-3/code.ml">code.ml</a></li>
                     </ul>
                 </li>
-                <li>Semaine 4
+                <li>Définitions récursives (suite)
                     <ul>
-                        <li><a href="/INF201/sem-4/recursivite_suite.pdf">Définitions récursives (suite)</a></li>
+                        <li><a href="/INF201/sem-4/recursivite_suite.pdf">Cours</a></li>
                         <li><a href="/INF201/sem-4/code.ml">code.ml</a></li>
                     </ul>
                 </li>
-                <li>Semaine 5
+                <li>Listes #1
                     <ul>
-                        <li><a href="/INF201/sem-5/listes.pdf">Listes #1</a></li>
+                        <li><a href="/INF201/sem-5/listes.pdf">Cours</a></li>
                         <li><a href="/INF201/sem-5/code.ml">code.ml</a></li>
                     </ul>
                 </li>
-                <li>Semaine 6
+                <li>Listes #2
                     <ul>
-                        <li><a href="/INF201/sem-6/listes_suite.pdf">Listes #2</a></li>
+                        <li><a href="/INF201/sem-6/listes_suite.pdf">Cours</a></li>
                         <li><a href="/INF201/sem-6/code.ml">code.ml</a></li>
                     </ul>
                 </li>
@@ -71,9 +70,9 @@
                     <a href="/INF201/sem-7/qcm_2019.pdf">sujet</a>
                     <a href="/INF201/sem-7/qcm_2019_correction.pdf">corrigé</a>
                 </li>
-                <li>Semaine 8
+                <li>Listes #3
                     <ul>
-                        <li><a href="/INF201/sem-8/listes_suite_suite.pdf">Listes #3</a></li>
+                        <li><a href="/INF201/sem-8/listes_suite_suite.pdf">Cours</a></li>
                         <li><a href="/INF201/sem-8/code.ml">code.ml</a></li>
                     </ul>
                 </li>
