Add two links to Chamilo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,35 @@
             personnels des professeurs.
         </p>
 
+        <div style="border: 1px solid black; padding: 10px; margin: 10px;">
+            <h2 style="margin-top: 0;">Turing depuis votre navigateur</h2>
+            <p>
+                Pour les UEs d'INF*, un pont (non-officiel) vers turing a été
+                mis en place à l'addresse
+                <a href="https://turing.polys-uga.edgarogh.fr/">https://turing.polys-uga.edgarogh.fr/</a>,
+                et permet d'accéder à turing depuis un navigateur web, sans
+                installer quoi que ce soit sur votre ordinateur.
+            </p>
+            <p>
+                Nous insistons sur le fait que ce service est non-officiel, et
+                n'offrons absolument <mark>AUCUNE GARANTIE</mark> sur son bon
+                fonctionnement, ni sur l'absence de faille de sécurité qui
+                donneraient, par exemple, accès à votre compte UGA à une
+                personne non autorisée.
+                <mark>
+                    NOUS DECLINONS TOUTE RESPONSABILITE EN CAS DE COMPROMISSION
+                    DE COMPTE PAR LE BIAIS DE CE SERVICE
+                </mark>
+            </p>
+            <p>
+                <i>
+                    Nous faisons quand même du mieux possible pour fournir un
+                    service de qualité et mettons en oeuvre tout ce qu'il nous
+                    est possible de mettre en oeuvre pour pas qu'il n'y ait de
+                    problème.s (connection sécurisée par HTTPS par exemple).
+                </i>
+            </p>
+        </div>
 
         <h2>INF201 : OCaml</h2>
         <h2>INF203 : Unix, Bash et C</h2>
@@ -28,35 +57,6 @@
                 Pour vous entraîner, vous pouvez soit <a href="/INF203/installation">installer CLang et Bash sur votre machine</a>,
                 soit <a href="/INF203/ssh">vous connecter à distance via SSH aux serveurs de l'UGA (Turing)</a>.
             </p>
-            <div style="border: 1px solid black; padding: 10px; margin: 10px;">
-                <h2 style="margin-top: 0;">Turing depuis votre navigateur</h2>
-                <p>
-                    Pour les UEs d'INF*, un pont (non-officiel) vers turing a été
-                    mis en place à l'addresse
-                    <a href="https://turing.polys-uga.edgarogh.fr/">https://turing.polys-uga.edgarogh.fr/</a>,
-                    et permet d'accéder à turing depuis un navigateur web, sans
-                    installer quoi que ce soit sur votre ordinateur.
-                </p>
-                <p>
-                    Nous insistons sur le fait que ce service est non-officiel, et
-                    n'offrons absolument <mark>AUCUNE GARANTIE</mark> sur son bon
-                    fonctionnement, ni sur l'absence de faille de sécurité qui
-                    donneraient, par exemple, accès à votre compte UGA à une
-                    personne non autorisée.
-                    <mark>
-                        NOUS DECLINONS TOUTE RESPONSABILITE EN CAS DE COMPROMISSION
-                        DE COMPTE PAR LE BIAIS DE CE SERVICE
-                    </mark>
-                </p>
-                <p>
-                    <i>
-                        Nous faisons quand même du mieux possible pour fournir un
-                        service de qualité et mettons en oeuvre tout ce qu'il nous
-                        est possible de mettre en oeuvre pour pas qu'il n'y ait de
-                        problème.s (connection sécurisée par HTTPS par exemple).
-                    </i>
-                </p>
-            </div>
             <p><a href="https://inf203.gricad-pages.univ-grenoble-alpes.fr/">Le site original</a></p>
             <ol>
                 <li>Bases en UNIX
@@ -141,6 +141,12 @@
                 </li>
             </ol>
         <h2>MAT201 : Algèbre linéaire</h2>
+            <p>
+                Pierre Will met ses notes de cours chaque lundi sur Chamilo (elles sont aussi disponibles ici). Il faut les lire et les recopier.
+                Selon les enseignants, les TD ne se déroulent pas au même endroit, mais la plupart utilisent le forum Chamilo ou le mail pour répondre
+                aux questions.
+            </p>
+            <p><a href="https://chamilo.univ-grenoble-alpes.fr/courses/MAT201/index.php?id_session=0">Chamilo</a></p>
             <ul>
                 <li><a href="/MAT201/cours.pdf">Cours + TD + Annales</a></li>
                 <li>Notes de cours (spécial confinement)
@@ -161,6 +167,7 @@
                 </li>
             </ol>
         <h2>PHY201 : Courant alternatif</h2>
+            <p><a href="https://chamilo.univ-grenoble-alpes.fr/courses/PAX2PH21/index.php">Chamilo de l'UE</a></p>
             <ul>
                 <li><a href="/PHY201/cours.pdf">Cours</a></li>
                 <li><a href="/PHY201/tp_td.pdf">TP / TD</a></li>
