--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                 <li>Notes de cours (spécial confinement)
                     <ul>
                         <li><a href="/MAT201/notes_cours_16_03.pdf">16/03</a></li>
+                        <li><a href="/MAT201/notes_cours_23_03.pdf">23/03</a></li>
                     </ul>
                 </li>
             </ul>
