--- a/index.html
+++ b/index.html
@@ -232,7 +232,11 @@
                         <li><a href="/MAT203/chap-2/cours.pdf">Cours</a></li>
                     </ul>
                 </li>
-                <li>Fonctions</li>
+                <li>Fonctions
+		    <ul>
+                        <li><a href="/MAT203/chap-3/cours.pdf">Cours</a></li>
+                    </ul>
+		</li>
                 <li>Dérivées
                     <ul>
                         <li><a href="/MAT203/chap-4/cours.pdf">Cours</a></li>
