--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
                     <ul>
                         <li><a href="/MAT201/notes_cours_16_03.pdf">16/03</a></li>
                         <li><a href="/MAT201/notes_cours_23_03.pdf">23/03</a></li>
+                        <li><a href="/MAT201/notes_cours_30_03.pdf">30/03</a></li>
                     </ul>
                 </li>
             </ul>
